--- a/contact.html
+++ b/contact.html
@@ -17,25 +17,25 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <nav class="navbar navbar-expand fixed-top bg-body-tertiary">
+    <div class="collapse" id="navbarToggleExternalContent">
+      <div class="bg-body-tertiary p-4">
         <div class="container-fluid">
-          <a class="navbar-brand active text-light" href="index.html"><i class="bi bi-house-door-fill"></i>World Holiday's</a>
+          <a class="navbar-brand active text-light" href="/index.html"><i class="bi bi-house-door-fill"></i>World Holiday's</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link text-light" href="About.html">About Us</a>
+                <a class="nav-link text-light" href="/About.html">About Us</a>
               </li>
               <li class="nav-item text-white">
-                <a class="nav-link text-light" href="contact.html">Contact</a>
+                <a class="nav-link text-light" href="/contact.html">Contact</a>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Holiday's
                   </a>
-                  <ul class="dropdown-menu">
+                  <ul class="dropdown-menu cool">
                     <li><a class="dropdown-item" href="../canada/canada.html">Canada Day</a></li>
                     <li><a class="dropdown-item" href="../DR/dominican-republic.html">Independence Day</a></li>
                     <li><a class="dropdown-item" href="../Brazil/brazil.html">All Souls' Day</a></li>
@@ -51,7 +51,15 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </div>
+    </div>
+    <nav class="navbar navbar-dark bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
 </header>
 <main>
   <h1 class="d-flex justify-content-center">Our Contacts:</h1>
