--- a/japan/japan.html
+++ b/japan/japan.html
@@ -16,41 +16,49 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <nav class="navbar navbar-expand fixed-top bg-body-tertiary">
+    <div class="collapse" id="navbarToggleExternalContent">
+      <div class="bg-body-tertiary p-4">
         <div class="container-fluid">
           <a class="navbar-brand active text-light" href="/index.html"><i class="bi bi-house-door-fill"></i>World Holiday's</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link text-light" href="/About.html">About Us</a>
               </li>
-              <li class="nav-item text-white text-light">
+              <li class="nav-item text-white">
                 <a class="nav-link text-light" href="/contact.html">Contact</a>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Holiday's
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="../canada/canada.html">Canada Day</a></li>
-                      <li><a class="dropdown-item" href="../DR/dominican-republic.html">Independence Day</a></li>
-                      <li><a class="dropdown-item" href="../Brazil/brazil.html">All Souls' Day</a></li>
-                      <li><a class="dropdown-item" href="../Russia/russia.html">Victory Day</a></li>
-                      <li><a class="dropdown-item" href="../Africa/africa.html">Freedom Day</a></li>
-                      <li><a class="dropdown-item" href="../Italy/italy.html">Festa della Liberazione Day</a></li>
-                      <li><a class="dropdown-item" href="../Pakistan/pakistan.html">Quaid-e-Azam Day</a></li>
-                      <li><a class="dropdown-item" href="../austrailia/australia.html">Australia Day</a></li>
-                      <li><a class="dropdown-item" href="../japan/japan.html">labor Thanksgiving Day</a></li>
-                    </ul>
-                  </li>
+                  <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Holiday's
+                  </a>
+                  <ul class="dropdown-menu cool">
+                    <li><a class="dropdown-item" href="../canada/canada.html">Canada Day</a></li>
+                    <li><a class="dropdown-item" href="../DR/dominican-republic.html">Independence Day</a></li>
+                    <li><a class="dropdown-item" href="../Brazil/brazil.html">All Souls' Day</a></li>
+                    <li><a class="dropdown-item" href="../Russia/russia.html">Victory Day</a></li>
+                    <li><a class="dropdown-item" href="../Africa/africa.html">Freedom Day</a></li>
+                    <li><a class="dropdown-item" href="../Italy/italy.html">Festa della Liberazione Day</a></li>
+                    <li><a class="dropdown-item" href="../Pakistan/pakistan.html">Quaid-e-Azam Day</a></li>
+                    <li><a class="dropdown-item" href="../austrailia/australia.html">Australia Day</a></li>
+                    <li><a class="dropdown-item" href="../japan/japan.html">labor Thanksgiving Day</a></li>
+                  </ul>
+                </li>
               </li>
             </ul>
           </div>
         </div>
-      </nav>
+      </div>
+    </div>
+    <nav class="navbar navbar-dark bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
 </header>
 <main>
     <h1 class="sofia-regular d-flex justify-content-center">Labor Thankgiving Day</h1>
